crates/java-syntax/tests/snapshots/parser_snapshots__parse_this.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    String field;
    void test() {
        this.test(this.field);
    }

    void test(String s) {}
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "field"
SEMICOLON ";"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
THIS_KW "this"
DOT "."
IDENTIFIER "test"
L_PAREN "("
THIS_KW "this"
DOT "."
IDENTIFIER "field"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "Test"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        TYPE
          QUALIFIED_NAME
            WHITESPACE "\n    "
            IDENTIFIER "String"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "field"
        SEMICOLON ";"
      METHOD_DECL
        WHITESPACE "\n    "
        VOID_KW "void"
        WHITESPACE " "
        IDENTIFIER "test"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          EXPRESSION_STMT
            METHOD_CALL
              FIELD_ACCESS
                LITERAL
                  WHITESPACE "\n        "
                  THIS_KW "this"
                DOT "."
                IDENTIFIER "test"
              ARGUMENT_LIST
                L_PAREN "("
                FIELD_ACCESS
                  LITERAL
                    THIS_KW "this"
                  DOT "."
                  IDENTIFIER "field"
                R_PAREN ")"
            SEMICOLON ";"
          WHITESPACE "\n    "
          R_BRACE "}"
      METHOD_DECL
        WHITESPACE "\n\n    "
        VOID_KW "void"
        WHITESPACE " "
        IDENTIFIER "test"
        FORMAL_PARAMETERS
          L_PAREN "("
          FORMAL_PARAMETER
            TYPE
              QUALIFIED_NAME
                IDENTIFIER "String"
            WHITESPACE " "
            IDENTIFIER "s"
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          R_BRACE "}"
      WHITESPACE "\n"
      R_BRACE "}"
  WHITESPACE "\n"
