crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_cast_expr_with_parentheses.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        Foo a = (Foo)(new Foo());
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "Foo"
WHITESPACE " "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
L_PAREN "("
IDENTIFIER "Foo"
R_PAREN ")"
L_PAREN "("
NEW_KW "new"
WHITESPACE " "
IDENTIFIER "Foo"
L_PAREN "("
R_PAREN ")"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..73
  CLASS_DECL@0..72
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    CLASS_BODY@10..72
      WHITESPACE@10..11 " "
      L_BRACE@11..12 "{"
      METHOD_DECL@12..70
        WHITESPACE@12..17 "\n    "
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        BLOCK@28..70
          WHITESPACE@28..29 " "
          L_BRACE@29..30 "{"
          LOCAL_VARIABLE_DECLARATION_STMT@30..64
            WHITESPACE@30..39 "\n        "
            LOCAL_VARIABLE_DECLARATION@39..63
              TYPE@39..42
                QUALIFIED_NAME@39..42
                  IDENTIFIER@39..42 "Foo"
              VARIABLE_DECLARATOR_LIST@42..63
                WHITESPACE@42..43 " "
                VARIABLE_DECLARATOR@43..63
                  IDENTIFIER@43..44 "a"
                  WHITESPACE@44..45 " "
                  EQUAL@45..46 "="
                  CAST_EXPR@46..63
                    WHITESPACE@46..47 " "
                    L_PAREN@47..48 "("
                    TYPE@48..51
                      QUALIFIED_NAME@48..51
                        IDENTIFIER@48..51 "Foo"
                    R_PAREN@51..52 ")"
                    PAREN_EXPR@52..63
                      L_PAREN@52..53 "("
                      NEW_EXPR@53..62
                        NEW_KW@53..56 "new"
                        QUALIFIED_NAME@56..60
                          WHITESPACE@56..57 " "
                          IDENTIFIER@57..60 "Foo"
                        ARGUMENT_LIST@60..62
                          L_PAREN@60..61 "("
                          R_PAREN@61..62 ")"
                      R_PAREN@62..63 ")"
            SEMICOLON@63..64 ";"
          WHITESPACE@64..69 "\n    "
          R_BRACE@69..70 "}"
      WHITESPACE@70..71 "\n"
      R_BRACE@71..72 "}"
  WHITESPACE@72..73 "\n"
